Fixed issue with the body not showing properly.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,7 +15,7 @@
 @media (max-width: 935px) {
   body {
     flex-direction: column;
-    overflow: hidden;
+    height: 100vh;
   }
   #navbar {
     width: 100vw;
